--- a/Style.css
+++ b/Style.css
@@ -40,6 +40,7 @@ ul {background-color: cadetblue}
 	overflow:hidden;
 	position: sticky;
 	top: 0;
+	border-radius: 5px;
 	}
 .navbar a:hover{
 	color:white;
@@ -113,17 +114,33 @@ main, header {
 	display:block;
 	background-color:darkseagreen;
 	padding: 10px;
-	margin:-10px;
+	margin-left:-5px;
+	margin-right:-5px;
 	color:black;
+	border-radius: 5px;
 	}
+.whatis-text{
+	margin-right:40px;
+	margin-left:40px;
+	font-size: 18px;
+	font-family: "Palatino Linotype","Times New Roman","serif";
+}
+
 .whatis2 {
-	display:flex;
-	justify-content:flex-end;
+	display:block;
 	background-color:darkseagreen;
 	padding: 10px;
-	margin:-10px;
+	margin-left:-5px;
+	margin-right:-5px;
 	color:black;
+	border-radius: 5px;
 	}
+.whatis-text2{
+	margin-right:40px;
+	margin-left:40px;
+	font-size: 18px;
+	font-family: "Palatino Linotype","Times New Roman","serif";
+}
 
 /*-------Play now image--------------------------------------*/
 #playimg {
@@ -134,10 +151,11 @@ main, header {
 	margin-right: 0px;
 	margin-top: 140px;
 	border: 1px solid #FA8312;
+	border-radius:5px;
 	box-shadow: 0 0 8px 1px darkred;
 	}
 .container2 {
-	position: relative;
+	position:relative;
 	display: block;
 	width: 100%;
 	height: auto;
@@ -230,6 +248,13 @@ footer {
 	display: none;		/*checkbox usynlig*/
 }
 @media (max-width: 800px) {
+	.container {
+		margin:15px;	
+	}
+	.navigation {
+		font-size:18px;	
+	}
+/*--------------------------*/	
 	.menu {
 		display: none;
 		flex-direction: column;
@@ -257,11 +282,6 @@ footer {
 	#menu-active:checked + .menu-box .line3 {			/*line 3*/
 		transform:rotate(45deg) translate(-35px,-20px);
 	}
-.container {
-		margin:15px;	
-	}
-	.navigation {
-		font-size:18px;	
-	}
+
 
 } 
