--- a/Guide/guidestyle.css
+++ b/Guide/guidestyle.css
@@ -159,9 +159,8 @@ ul {background-color: cadetblue}
 	margin-left: 0px;
 	margin-right: 0px;
 	}
-.about1 {
-	
-	}
+
+/*------*/
 
 .img80s {
 	width: 100%;
