--- a/Style.css
+++ b/Style.css
@@ -268,6 +268,9 @@ footer {
 .submit-button {
 	border-radius: 4px;
 }
+.form-submit button:hover {
+	background-color:lightgrey;
+}
 
 /*-------------------------------------------------------------*/
 /*---------Responsiveness  -----------------------------------*/
